compiler-core/src/parse/snapshots/gleam_core__parse__tests__const_invalid_tuple.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nconst a = #(1, 2, <-)\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:2:19
  │
2 │ const a = #(1, 2, <-)
  │                   ^^ I was not expecting this

Found `<-`, expected one of: 
`)`
a constant value
